src/objects/Search_Log__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Accuracy__c</fullName>
        <label>Accuracy</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altitude__c</fullName>
        <label>Altitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_USSD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this search came in from USSD</description>
        <label>From USSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CKW 3.O tracks group searches with this flag</description>
        <label>Group Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The group to which the interviewer/CKW is associated</description>
        <inlineHelpText>The group to which the interviewer/CKW is associated</inlineHelpText>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Search Logs</relationshipLabel>
        <relationshipName>Search_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handset_Submit_Time__c</fullName>
        <description>Time the phone sent the request</description>
        <label>Handset Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interviewee_Distance_Km__c</fullName>
        <description>Distance between where this search was done and the interviewee&apos;s home (if available)</description>
        <label>Interviewee Distance (km)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who requests information</description>
        <label>Interviewee</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Search Logs (Searches Administered)</relationshipLabel>
        <relationshipName>Interviewee_Search_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Search Logs</relationshipLabel>
        <relationshipName>Search_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer_Distance_Km__c</fullName>
        <description>Distance between where this search was done and the interviewer&apos;s home</description>
        <label>Interviewer Distance (km)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CKW/Interviewer as obtained from Salesforce using handset id</description>
        <label>Interviewer</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Search Logs (Searches Done)</relationshipLabel>
        <relationshipName>Search_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invalid_Farmer_Id__c</fullName>
        <description>The id used by a CKW to submit an invalid search</description>
        <label>Invalid Farmer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Owner_Id__c</fullName>
        <description>The Owner Id of the Interviewer. Used to filter searchlogs (e.g. for LAC searchlogs)</description>
        <formula>Interviewer__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>Record ID: Primary key (auto-generated)</description>
        <displayFormat>Record-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Server_Entry_Time__c</fullName>
        <description>Time the server received the request</description>
        <label>Server Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>TaroWorks</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Accuracy__c</fullName>
        <description>The accuracy of the GPS reading when the log was sent from the phone</description>
        <label>Submission Accuracy</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Altitude__c</fullName>
        <description>The altitude that the log was submitted from</description>
        <label>Submission Altitude</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_GPS_Timestamp__c</fullName>
        <description>The timestamp that the log was submitted from the phone</description>
        <label>Submission GPS Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submission_Latitude__c</fullName>
        <description>The latitude that the log was submitted from</description>
        <label>Submission Latitude</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Longitude__c</fullName>
        <description>The longitude that the log was submitted from</description>
        <label>Submission Longitude</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <label>Search Log</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Interviewee__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Accuracy__c</columns>
        <columns>Altitude__c</columns>
        <columns>Category__c</columns>
        <columns>Handset_Submit_Time__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Query__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Response__c</columns>
        <columns>Server_Entry_Time__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Handset_Submit_Time__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2012 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>